--- a/index.html
+++ b/index.html
@@ -7,31 +7,19 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Monthly Favorites Tracker</h1>
     <form name="form1" id="form1">
       Which month would you like to add a favorite to?
-      <select name="subject" id="subject"></select>
+      <select name="subject" id="month"></select>
+      <br /><br />
+      What would you like to add?
+      <select name="subject" id="item-type"></select>
       <br /><br />
     </form>
 
-    <label for="book">Favorite book:</label>
-    <input type="text" id="book" name="book" />
-    <button type="button" class="add" id="add2" onclick='book_func("book");'>
-      Add
-    </button>
-
-    <input type="reset" value="Reset" />
-    <br />
-    <br />
-    <label for="book">Favorite movie:</label>
-    <input type="text" id="movie" name="movie" />
-    <button type="button" class="add" id="add2" onclick='movie_func("movie");'>
-      Add
-    </button>
-    <br />
-    <br />
-    <label for="book">Favorite song:</label>
-    <input type="text" id="song" name="song" />
-    <button type="button" class="add" id="add2" onclick='song_func("song");'>
+    <label for="title">Title:</label>
+    <input type="text" id="title" name="title" />
+    <button type="button" class="add" id="add" onclick="handleAdd()">
       Add
     </button>
     <br />
