added local storage

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <br />
     <br />
     <div class="grid-container" id="grid-container"></div>
+    <br />
+    <button type="button" id="clear" onclick="handleClear()">Clear data</button>
     <script src="./script.js"></script>
   </body>
 </html>
