--- a/old/old.html
+++ b/old/old.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./old.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Monthy Favorites Tracker</title>
   </head>
@@ -27,6 +27,6 @@
     <div class="grid-container" id="grid-container"></div>
     <br />
     <button type="button" id="clear" onclick="handleClear()">Clear data</button>
-    <script src="./script.js"></script>
+    <script src="./old.js"></script>
   </body>
 </html>
