--- a/index.html
+++ b/index.html
@@ -9,47 +9,51 @@
   <body>
     <h1>Monthly Favorites Tracker</h1>
     <!-- Switching views-->
-    <button id="monthy-btn">Monthly View</button>
-    <button id="book-btn">Book View</button>
-    <button id="movie-btn">Movie View</button>
-    <button id="song-btn">Song View</button>
+    <div class="container">
+      <button class="view" id="monthy-btn">Monthly View</button>
+      <button class="view" id="book-btn">Book View</button>
+      <button class="view" id="movie-btn">Movie View</button>
+      <button class="view" id="song-btn">Song View</button>
+    </div>
     <!-- Submission form-->
-    <form name="form" id="form">
-      <div>
-        <label for="month">
-          Which month would you like to add a favorite to?
-        </label>
-        <select id="month" name="month">
-          <option value="January">January</option>
-          <option value="February">February</option>
-          <option value="March">March</option>
-          <option value="April">April</option>
-          <option value="May">May</option>
-          <option value="June">June</option>
-          <option value="July">July</option>
-          <option value="August">August</option>
-          <option value="September">September</option>
-          <option value="October">October</option>
-          <option value="November">November</option>
-          <option value="December">December</option>
-        </select>
-      </div>
+    <div class="container">
+      <form name="form" id="form">
+        <div class="form-row">
+          <label for="month">
+            Which month would you like to add a favorite to?
+          </label>
+          <select id="month" name="month">
+            <option value="January">January</option>
+            <option value="February">February</option>
+            <option value="March">March</option>
+            <option value="April">April</option>
+            <option value="May">May</option>
+            <option value="June">June</option>
+            <option value="July">July</option>
+            <option value="August">August</option>
+            <option value="September">September</option>
+            <option value="October">October</option>
+            <option value="November">November</option>
+            <option value="December">December</option>
+          </select>
+        </div>
 
-      <div>
-        <label for="item"> What would you like to add? </label>
-        <select id="item" name="item">
-          <option value="Book">Book</option>
-          <option value="Movie">Movie</option>
-          <option value="Song">Song</option>
-        </select>
-      </div>
+        <div class="form-row">
+          <label for="item"> What would you like to add? </label>
+          <select id="item" name="item">
+            <option value="Book">Book</option>
+            <option value="Movie">Movie</option>
+            <option value="Song">Song</option>
+          </select>
+        </div>
 
-      <div>
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" />
-        <input type="submit" value="Add" id="add" />
-      </div>
-    </form>
+        <div class="form-row">
+          <label for="title">Title:</label>
+          <input type="text" id="title" name="title" />
+          <input type="submit" value="Add" id="add" />
+        </div>
+      </form>
+    </div>
     <!--Grid display-->
     <div class="grid-container" id="grid"></div>
     <button type="button" id="clear">Clear data</button>
