--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Monthy Favorites Tracker</title>
+    <title>Monthly Favorites Tracker</title>
   </head>
   <body>
     <header>
@@ -52,8 +52,13 @@
         <div class="form-row">
           <label for="title">Title:</label>
           <input type="text" id="title" name="title" />
-          <input type="submit" value="Add" id="add" />
         </div>
+
+        <div class="form-row">
+          <label for="author">Author:</label>
+          <input type="text" id="author" name="author" />
+        </div>
+        <button type="submit">Add</button>
       </form>
     </div>
     <!--Grid display-->
